# whispercpp_kit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/docker/: Dockerfile  README.md  transcribe.py
src/whispercpp_kit/: __init__.py  core.py
