[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whispercpp_kit"
version = "0.1.7"
description = "A toolkit for whisper.cpp with audio processing and model management"
readme = "README.md"
authors = [{"name" = "Simeon Emanuilov", "email" = "simeon.emanuilov@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["whisper", "speech-to-text", "audio", "transcription"]
dependencies = [
    "ffmpeg-python",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/s-emanuilov/whispercpp_kit"